--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -55,6 +55,12 @@
             category="org.eclipse.chemclipse.chromatogram.xxd.integrator.ui.preferences.integratorPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakIntegrator"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIntegrator">
-      </page>                            
+      </page>
+      <page
+            name="Compensation Quantifier"
+            category="org.eclipse.chemclipse.chromatogram.msd.quantitation.ui.preferences.quantifierPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PageCompensationQuantifier"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pageCompensationQuantifier">
+      </page>                                  
    </extension>
 </plugin>
