--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -56,7 +56,14 @@
             peakQuantifier="net.openchrom.xxd.process.supplier.templates.peaks.StandardsReferencer"
             peakQuantifierName="Peak Standards Referencer (ISTD)"
             peakQuantifierSettings="net.openchrom.xxd.process.supplier.templates.settings.StandardsReferencerSettings">
-      </PeakQuantifierSupplier>          
+      </PeakQuantifierSupplier>
+      <PeakQuantifierSupplier
+            description="This methods compensates quantitation results."
+            id="net.openchrom.xxd.process.supplier.templates.peaks.compensation.quantifier"
+            peakQuantifier="net.openchrom.xxd.process.supplier.templates.peaks.CompensationQuantifier"
+            peakQuantifierName="Peak Compensation Quantifier"
+            peakQuantifierSettings="net.openchrom.xxd.process.supplier.templates.settings.CompensationQuantifierSettings">
+      </PeakQuantifierSupplier>                   
    </extension>
    <extension
          point="org.eclipse.chemclipse.chromatogram.xxd.integrator.peakIntegratorSupplier">
