--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -81,4 +81,60 @@
             class="net.openchrom.xxd.process.supplier.templates.preferences.PreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.chemclipse.msd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports a Peak Detector Template "
+            exportConverter="net.openchrom.xxd.process.supplier.templates.io.DetectorExport"
+            fileExtension="txt"
+            fileName="PeakDetectorTemplate.txt"
+            filterName="Peak Detector Template (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.detectorTemplateMSD"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.csd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports a Peak Detector Template "
+            exportConverter="net.openchrom.xxd.process.supplier.templates.io.DetectorExport"
+            fileExtension="txt"
+            fileName="PeakDetectorTemplate.txt"
+            filterName="Peak Detector Template (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.detectorTemplateCSD"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.msd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports a Peak Identifier Template "
+            exportConverter="net.openchrom.xxd.process.supplier.templates.io.IdentifierExport"
+            fileExtension="txt"
+            fileName="PeakIdentifierTemplate.txt"
+            filterName="Peak Identifier Template (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.identifierTemplateMSD"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.csd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports a Peak Identifier Template "
+            exportConverter="net.openchrom.xxd.process.supplier.templates.io.IdentifierExport"
+            fileExtension="txt"
+            fileName="PeakIdentifierTemplate.txt"
+            filterName="Peak Identifier Template (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.identifierTemplateCSD"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+   </extension>   
 </plugin>
