--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -57,7 +57,7 @@
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIntegrator">
       </page>
       <page
-            name="Compensation Quantifier"
+            name="Compensation Quantifier (ISTD)"
             category="org.eclipse.chemclipse.chromatogram.msd.quantitation.ui.preferences.quantifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PageCompensationQuantifier"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pageCompensationQuantifier">
