--- a/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios/plugin.xml
@@ -37,4 +37,65 @@
             class="net.openchrom.xxd.classifier.supplier.ratios.preferences.PreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.chemclipse.msd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports a Quant Ratio Classifier Template "
+            exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.QuantRatioExport"
+            fileExtension="txt"
+            fileName="QuantRatioClassifierTemplate.txt"
+            filterName="Template Quant Ratios (*.txt)"
+            id="net.openchrom.xxd.classifier.supplier.ratios.quantRatioTemplateMSD"
+            importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+      <ChromatogramSupplier
+            description="Exports a Time Ratio Classifier Template "
+            exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.TimeRatioExport"
+            fileExtension="txt"
+            fileName="TimeRatioClassifierTemplate.txt"
+            filterName="Template Time Ratios (*.txt)"
+            id="net.openchrom.xxd.classifier.supplier.ratios.timeRatioTemplateMSD"
+            importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+      <ChromatogramSupplier
+            description="Exports a Trace Ratio Classifier Template "
+            exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.TraceRatioExport"
+            fileExtension="txt"
+            fileName="TraceRatioClassifierTemplate.txt"
+            filterName="Template Trace Ratios (*.txt)"
+            id="net.openchrom.xxd.classifier.supplier.ratios.traceRatioTemplateMSD"
+            importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>           
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.csd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports a Quant Ratio Classifier Template "
+            exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.QuantRatioExport"
+            fileExtension="txt"
+            fileName="QuantRatioClassifierTemplate.txt"
+            filterName="Template Quant Ratios (*.txt)"
+            id="net.openchrom.xxd.classifier.supplier.ratios.quantRatioTemplateCSD"
+            importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+      <ChromatogramSupplier
+            description="Exports a Time Ratio Classifier Template "
+            exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.TimeRatioExport"
+            fileExtension="txt"
+            fileName="TimeRatioClassifierTemplate.txt"
+            filterName="Template Time Ratios (*.txt)"
+            id="net.openchrom.xxd.classifier.supplier.ratios.timeRatioTemplateCSD"
+            importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>       
+   </extension> 
 </plugin>
