--- a/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios.ui/plugin.xml
@@ -33,7 +33,13 @@
             class="net.openchrom.xxd.classifier.supplier.ratios.ui.preferences.PreferencePageQuant"
             id="net.openchrom.xxd.classifier.supplier.ratios.ui.preferences.preferencePageQuant"
             name="Quant Ratio Classifier">
-      </page>                  
+      </page> 
+      <page
+            category="net.openchrom.xxd.classifier.supplier.ratios.ui.preferences.preferencePage"
+            class="net.openchrom.xxd.classifier.supplier.ratios.ui.preferences.PreferencePageQual"
+            id="net.openchrom.xxd.classifier.supplier.ratios.ui.preferences.preferencePageQual"
+            name="Quality Ratio Classifier">
+      </page>                       
    </extension>
    <extension
          point="org.eclipse.chemclipse.ux.extension.ui.measurementResultVisualization">
@@ -90,4 +96,23 @@
          </adapter>
       </factory>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="net.openchrom.xxd.classifier.supplier.ratios.model.qual.QualRatios"
+            class="net.openchrom.xxd.classifier.supplier.ratios.ui.internal.provider.QualRatiosAdapterFactory">
+         <adapter
+               type="org.eclipse.jface.viewers.IStructuredContentProvider">
+         </adapter>
+         <adapter
+               type="org.eclipse.jface.viewers.ITableLabelProvider">
+         </adapter>
+         <adapter
+               type="org.eclipse.chemclipse.support.ui.swt.columns.ColumnDefinitionProvider">
+         </adapter>
+         <adapter
+               type="org.eclipse.jface.viewers.ISelectionChangedListener">
+         </adapter>
+      </factory>
+   </extension>   
 </plugin>
