--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -61,7 +61,13 @@
             category="org.eclipse.chemclipse.chromatogram.msd.quantitation.ui.preferences.quantifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PageCompensationQuantifier"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pageCompensationQuantifier">
-      </page>                                  
+      </page>
+      <page
+            name="Standards Extractor (ISTD)"
+            category="org.eclipse.chemclipse.chromatogram.msd.quantitation.ui.preferences.quantifierPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PageStandardsExtractor"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pageStandardsExtractor">
+      </page>                                       
    </extension>
    <extension
          point="org.eclipse.chemclipse.chromatogram.msd.peak.detector.peakDetectorSupplier">
