--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -67,7 +67,13 @@
             category="org.eclipse.chemclipse.chromatogram.msd.quantitation.ui.preferences.quantifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PageStandardsExtractor"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pageStandardsExtractor">
-      </page>                                       
+      </page>
+      <page
+            name="Peak Transfer"
+            category="org.eclipse.chemclipse.chromatogram.msd.peak.detector.ui.preferences.peakDetectorPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakTransfer"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakTransfer">
+      </page>                                             
    </extension>
    <extension
          point="org.eclipse.chemclipse.chromatogram.msd.peak.detector.peakDetectorSupplier">
