--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -81,7 +81,27 @@
             integratorName="Peak Integrator Template"
             integratorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakIntegrationSettings">
       </PeakIntegratorSupplier>
-   </extension>           
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.chromatogram.msd.peak.detector.peakDetectorSupplier">
+      <PeakDetector
+            description="This peak detector tries to transfer peaks 1:1 to the referenced chromatograms."
+            id="net.openchrom.xxd.process.supplier.templates.peaks.transfer.msd"
+            peakDetector="net.openchrom.xxd.process.supplier.templates.peaks.PeakTransfer"
+            peakDetectorName="Template Peak Transfer (MSD)"
+            peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakTransferSettings">
+      </PeakDetector>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.chromatogram.csd.peak.detector.peakDetectorSupplier">
+      <PeakDetector
+            description="This peak detector tries to transfer peaks 1:1 to the referenced chromatograms"
+            id="net.openchrom.xxd.process.supplier.templates.peaks.transfer.csd"
+            peakDetector="net.openchrom.xxd.process.supplier.templates.peaks.PeakTransfer"
+            peakDetectorName="Template Peak Transfer (CSD)"
+            peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakTransferSettings">
+      </PeakDetector>
+   </extension>   
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
