--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -5,7 +5,7 @@
 	PARENT
   -->
   <parent>
-    <groupId>net.openchrom.releng</groupId>
+    <groupId>net.openchrom</groupId>
     <artifactId>master</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -13,13 +13,13 @@
   <!--
 	ARTIFACT
   -->
-  <groupId>net.openchrom.releng</groupId>
+  <groupId>net.openchrom</groupId>
   <artifactId>features</artifactId>
   <packaging>pom</packaging>
   <!--
 	DESCRIPTION
   -->
-  <name>OpenChrom</name>
+  <name>OpenChrom::Features</name>
   <description>
 	OpenChrom is an open source workbench to edit and modify chromatographic data.
   </description>
