--- a/openchrom/releng/net.openchrom.aggregator/pom.xml
+++ b/openchrom/releng/net.openchrom.aggregator/pom.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <!--
-	PARENT
-  -->
   <parent>
-    <groupId>net.openchrom.releng</groupId>
+    <groupId>net.openchrom</groupId>
     <artifactId>master</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
-  <!--
-	ARTIFACT
-  -->
-  <groupId>net.openchrom.releng</groupId>
-  <artifactId>parent</artifactId>
+  <groupId>net.openchrom</groupId>
+  <artifactId>aggregator</artifactId>
   <packaging>pom</packaging>
   <!--
 	DESCRIPTION
   -->
-  <name>OpenChrom</name>
+  <name>OpenChrom::Releng::Aggregator</name>
   <description>
 	OpenChrom is an open source workbench to edit and modify chromatographic data.
   </description>
@@ -51,6 +45,6 @@
 	MODULES
   -->
   <modules>
-    <module>../openchrom.targetplatform</module>
+    <module>../net.openchrom.targetplatform</module>
   </modules>
 </project>
