--- a/openchrom/cbi/net.openchrom.msd.converter.supplier.pdf.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.msd.converter.supplier.pdf.cbi/pom.xml
@@ -4,22 +4,21 @@
   <!--
 	PARENT
   -->
-  <parent>
-    <groupId>net.openchrom</groupId>
-    <artifactId>master</artifactId>
-    <version>BUILD-VERSION</version>
-    <relativePath>../../pom.xml</relativePath>
-  </parent>
+          <parent>
+              <groupId>net.openchrom</groupId>
+              <artifactId>master</artifactId>
+              <version>1.4.0-SNAPSHOT</version>
+          </parent>
   <!--
 	ARTIFACT
   -->
   <groupId>net.openchrom</groupId>
-  <artifactId>parent</artifactId>
+<artifactId>pdfconverter</artifactId>
   <packaging>pom</packaging>
   <!--
 	DESCRIPTION
   --> 
-  <name>OpenChrom PDF Converter</name>
+<name>OpenChrom::pdfconverter::Aggregator</name>
   <description>
 	The OpenChrom PDF converter writes chromatogram files to PDF format. It extends the functionality of the OpenChrom Rich Client Platform (RCP).
   </description>
@@ -38,7 +37,7 @@
   <developers>
     <developer>
       <id>eselmeister</id>
-      <name>Philip Wenig</name>
+<name>OpenChrom::pdfconverter::Aggregator</name>
       <email>philip.wenig [at] openchrom.net</email>
       <timezone>+1</timezone>
       <roles>
