--- a/openchrom/cbi/net.openchrom.wsd.converter.supplier.abif.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.wsd.converter.supplier.abif.cbi/pom.xml
@@ -4,22 +4,21 @@
   <!--
 	PARENT
   -->
-  <parent>
-    <groupId>net.openchrom</groupId>
-    <artifactId>master</artifactId>
-    <version>BUILD-VERSION</version>
-    <relativePath>../../pom.xml</relativePath>
-  </parent>
+          <parent>
+              <groupId>net.openchrom</groupId>
+              <artifactId>master</artifactId>
+              <version>1.4.0-SNAPSHOT</version>
+          </parent>
   <!--
 	ARTIFACT
   -->
   <groupId>net.openchrom</groupId>
-  <artifactId>parent</artifactId>
+<artifactId>abifconverter</artifactId>
   <packaging>pom</packaging>
   <!--
 	DESCRIPTION
   --> 
-  <name>OpenChrom ABIF Converter</name>
+<name>OpenChrom::abifconverter::Aggregator</name>
   <description>
 	The OpenChrom ABIF converter reads ABIF *.ab1 chromatogram files. It extends the functionality of the OpenChrom Rich Client Platform (RCP).
   </description>
@@ -38,7 +37,7 @@
   <developers>
     <developer>
       <id>mma</id>
-      <name>Matthias Mailänder</name>
+<name>OpenChrom::abifconverter::Aggregator</name>
       <email>mailaender [at] mailaender.name</email>
       <timezone>+1</timezone>
       <roles>
@@ -47,7 +46,7 @@
     </developer>
     <developer>
       <id>eselmeister</id>
-      <name>Philip Wenig</name>
+<name>OpenChrom::abifconverter::Aggregator</name>
       <email>philip.wenig [at] openchrom.net</email>
       <timezone>+1</timezone>
       <roles>
