--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ openchrom/features/net.openchrom.msd.converter.supplier.cms.feature/target/
 openchrom/plugins/net.openchrom.msd.converter.supplier.cms.ui/target/
 openchrom/plugins/net.openchrom.msd.converter.supplier.cms/target/
 openchrom/sites/net.openchrom.msd.converter.supplier.cms.updateSite/target/
+bin/
+target/
