--- a/openchrom/cbi/net.openchrom.msd.converter.supplier.cms.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.msd.converter.supplier.cms.cbi/pom.xml
@@ -4,22 +4,21 @@
   <!--
 	PARENT
   -->
-  <parent>
-    <groupId>net.openchrom</groupId>
-    <artifactId>master</artifactId>
-    <version>BUILD-VERSION</version>
-    <relativePath>../../pom.xml</relativePath>
-  </parent>
+          <parent>
+              <groupId>net.openchrom</groupId>
+              <artifactId>master</artifactId>
+              <version>1.4.0-SNAPSHOT</version>
+          </parent>
   <!--
 	ARTIFACT
   -->
   <groupId>net.openchrom</groupId>
-  <artifactId>parent</artifactId>
+<artifactId>cmsconverter</artifactId>
   <packaging>pom</packaging>
   <!--
 	DESCRIPTION
   --> 
-  <name>OpenChrom CMS Converter</name>
+<name>OpenChrom::cmsconverter::Aggregator</name>
   <description>
 	The OpenChrom CMS converter reads mass spectrum library files. It extends the functionality of the OpenChrom Rich Client Platform (RCP).
   </description>
@@ -38,7 +37,7 @@
   <developers>
     <developer>
       <id>whitlock</id>
-      <name>Walter Whitlock</name>
+<name>OpenChrom::cmsconverter::Aggregator</name>
       <email>wwmail5001 [at] gmail.com</email>
       <timezone>-5</timezone>
       <roles>
@@ -47,7 +46,7 @@
     </developer>
     <developer>
       <id>eselmeister</id>
-      <name>Philip Wenig</name>
+<name>OpenChrom::cmsconverter::Aggregator</name>
       <email>philip.wenig [at] openchrom.net</email>
       <timezone>+1</timezone>
       <roles>
