--- a/openchrom/cbi/net.openchrom.msqbatlibs.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.msqbatlibs.cbi/pom.xml
@@ -2,18 +2,17 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<!-- PARENT -->
-	<parent>
-		<groupId>net.openchrom</groupId>
-		<artifactId>master</artifactId>
-		<version>BUILD-VERSION</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
+          <parent>
+              <groupId>net.openchrom</groupId>
+              <artifactId>master</artifactId>
+              <version>1.4.0-SNAPSHOT</version>
+          </parent>
 	<!-- ARTIFACT -->
 	<groupId>net.openchrom</groupId>
-	<artifactId>parent</artifactId>
+<artifactId>msqbatlibs</artifactId>
 	<packaging>pom</packaging>
 	<!-- DESCRIPTION -->
-	<name></name>
+<name>OpenChrom::msqbatlibs::Aggregator</name>
 	<description>
 	
   </description>
@@ -28,7 +27,7 @@
 	<developers>
 		<developer>
 			<id>eselmeister</id>
-			<name>Philip Wenig</name>
+<name>OpenChrom::msqbatlibs::Aggregator</name>
 			<email>philip.wenig [at] openchrom.net</email>
 			<timezone>+1</timezone>
 			<roles>
@@ -37,7 +36,7 @@
 		</developer>
 		<developer>
 			<id>kerner</id>
-			<name>Alexander Kerner</name>
+<name>OpenChrom::msqbatlibs::Aggregator</name>
 			<email>alexander.kerner [at] openchrom.net</email>
 			<timezone>+1</timezone>
 			<roles>
