--- a/openchrom/sites/pom.xml
+++ b/openchrom/sites/pom.xml
@@ -2,15 +2,15 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>net.openchrom</groupId>
-    <artifactId>parent</artifactId>
-    <version>BUILD-VERSION</version>
-    <relativePath>../cbi/net.openchrom.msqbatlibs.cbi/pom.xml</relativePath>
-  </parent>
+          <parent>
+              <groupId>net.openchrom</groupId>
+              <artifactId>msqbatlibs</artifactId>
+              <version>1.4.0-SNAPSHOT</version>
+              <relativePath>../cbi/net.openchrom.msqbatlibs.cbi/pom.xml</relativePath>
+          </parent>
 
-  <artifactId>net.openchrom.sites.parent</artifactId>
+<artifactId>net.openchrom.msqbatlibs.sites</artifactId>
   <packaging>pom</packaging>
-  <name>updateSites</name>
+<name>OpenChrom::msqbatlibs::Sites</name>
 
 </project>
