--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -2,15 +2,15 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>net.openchrom</groupId>
-    <artifactId>parent</artifactId>
-    <version>BUILD-VERSION</version>
-    <relativePath>../cbi/net.openchrom.xxd.classifier.supplier.ratios.cbi/pom.xml</relativePath>
-  </parent>
+          <parent>
+              <groupId>net.openchrom</groupId>
+              <artifactId>classifierratios</artifactId>
+              <version>1.4.0-SNAPSHOT</version>
+              <relativePath>../cbi/net.openchrom.xxd.classifier.supplier.ratios.cbi/pom.xml</relativePath>
+          </parent>
 
-  <artifactId>net.openchrom.features.parent</artifactId>
+<artifactId>net.openchrom.classifierratios.features</artifactId>
   <packaging>pom</packaging>
-  <name>features</name>
+<name>OpenChrom::classifierratios::Features</name>
 
 </project>
