--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-          <parent>
-              <groupId>net.openchrom</groupId>
-              <artifactId>pdfconverter</artifactId>
-              <version>1.4.0-SNAPSHOT</version>
-              <relativePath>../cbi/net.openchrom.msd.converter.supplier.pdf.cbi/pom.xml</relativePath>
-          </parent>
+	<parent>
+		<groupId>net.openchrom</groupId>
+		<artifactId>plugins</artifactId>
+		<version>1.4.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
-<artifactId>net.openchrom.pdfconverter.plugins</artifactId>
-  <packaging>pom</packaging>
-<name>OpenChrom::pdfconverter::Plugins</name>
+	<artifactId>net.openchrom.pdfconverter.plugins</artifactId>
+	<packaging>pom</packaging>
+	<name>OpenChrom::Plugins</name>
+	<modules>
 
+
+	</modules>
 </project>
