--- a/openchrom/releng/net.openchrom.aggregator/pom.xml
+++ b/openchrom/releng/net.openchrom.aggregator/pom.xml
@@ -46,5 +46,7 @@
   -->
   <modules>
     <module>../net.openchrom.targetplatform</module>
+    <module>../../plugins</module>
+    <module>../../features</module>
   </modules>
 </project>
