--- a/openchrom/releng/net.openchrom.aggregator/pom.xml
+++ b/openchrom/releng/net.openchrom.aggregator/pom.xml
@@ -49,5 +49,6 @@
     <module>../../plugins</module>
     <module>../../features</module>
     <module>../../sites</module>
+    <module>../../products</module>
   </modules>
 </project>
